--- a/index.html
+++ b/index.html
@@ -7,24 +7,28 @@
     <title>Nestar</title>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
     <div class="col-12 m-auto position-fixed navbar" id="navbar">
-        <div id="drawer" class="drawer position-absolute min-vh-100 min-vw-100 bkg-green top-0">
+        <nav id="drawer" class="drawer position-absolute min-vh-100 min-vw-100 bkg-green top-0 row justify-content-between align-items-center">
             <a class="position-absolute logo" href="/"><img src="./assets/images/logo-purple.svg" alt="Nestar"></a>
             <div id="closeDrawer" class="close">
                 <div class="bkg-lavender"></div>
                 <div class="bkg-lavender"></div>
             </div>
-            <div class="d-flex flex-column justify-content-center vh-100 menu-list">
+            <div class="d-flex flex-column justify-content-center vh-100 menu-list col-4">
                 <h2 class="color-lavender"><a href="/" class="link--hover">Home<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="#" class="link--hover">About<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="career.html" class="link--hover">Careers<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="#" class="link--hover">Contact<div class="bkg-lavender"></div></a></h2>
             </div>
-        </div>
-        <nav class="container-xxl m-auto d-flex justify-content-between">
+            <div class="col-5 d-none d-lg-block">
+                <img class="w-100" src="./assets/images/lighting.jpg" />
+            </div>
+        </nav>
+        <div class="container-xxl m-auto d-flex justify-content-between">
                 <a href="/"><img src="./assets/images/logo-darkblue.svg" alt="Nestar"></a>
                 <div class="d-flex justify-content-between">
                     <div class="d-none d-sm-block me-5 language-option">
@@ -33,7 +37,7 @@
                     </div>
                     <div id="openDrawer" class="button-clickable"><span>Menu</span></div>
                 </div>
-        </nav>
+        </div>
     </div>
     <header class="bkg-pink pt-5 min-vh-100 d-flex flex-column justify-content-center">
         <div class="container-xxl">
@@ -42,7 +46,6 @@
                       <img src="./assets/images/home-hero.jpg" alt="">
                   </div>
                   <h1 class="mt-3">Make yourself at home</h1>
-                <!-- <lottie-player src="./assets/lottie_icons/icon_courses.json" background="transparent" speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player> -->
               </div>
           </div>
     </header>
@@ -56,7 +59,7 @@
                     <img class="w-100 slide-in slide-left" src="./assets/images/rentals.jpg" alt="Rental providers">
                     <div class="row mt-5 justify-content-between">
                         <div class="col-12 col-sm-8">
-                            <p>We provide rentals that make everyone feel welcome. Because ultimately that’s the kind of city we want to live in. With great service and smart solutions we attend to our tenants’ equally diverse needs. In the end, it’s about providing a springboard from where to take on the world. A place you can truly call sweet, sweet home. </p>
+                            <p>We provide rentals that make everyone feel welcome. Because ultimately that&#8217;s the kind of city we want to live in. With great service and smart solutions we attend to our tenants’ equally diverse needs. In the end, it’s about providing a springboard from where to take on the world. A place you can truly call sweet, sweet home. </p>
                         </div>
                         <div class="col-12 col-sm-2">
                             <a class="link--hover" href="#">About us<div class="bkg-darkblue"></div></a>
@@ -73,7 +76,7 @@
                     <h2 class="slide-in slide-right">Differences to fall for</h2>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p>We provide rentals that make everyone feel welcome. Because ultimately that’s the kind of city we want to live in. With great service and smart solutions we attend to our tenants’ equally diverse needs. In the end, it’s about providing a springboard from where to take on the world. A place you can truly call sweet, sweet home. </p>
+                    <p>We offer rentals all across greater Berlin and Germany. From the inner city to the suburbs. From vibrant areas to the calm and restrained. With great service and reachability, we help you find a home where you belong.</p>
                 </div>
             </div>
             <div class="row mt-5 pt-5 g-0 g-lg-3 justify-content-center justify-content-xxl-between">
