animations career page

--- a/career.html
+++ b/career.html
@@ -90,9 +90,9 @@
     <section class="bkg-blue pt-5 pb-5">
         <div class="container-xxl mt-5 mb-5 pb-5 color-red">
             <div class="row pb-5">
-                <h3 class="large">Employee benefits</h3>
+                <h3 class="large slide-in slide-right">Employee benefits</h3>
             </div>
-            <div class="row justify-content-between mt-5">
+            <div class="row justify-content-between mt-5 slide-in slide-up">
                 <div class="col-12 col-md-6 col-lg-3">
                     <div>
                         <lottie-player class="lottie-icons" src="./assets/lottie_icons/icon_vacation.json" background="transparent" speed="1" loop autoplay/>
@@ -131,13 +131,13 @@
                     <p class="l400 border-bottom-blue pb-3">Our values</p>
                 </div>
                 <div class="col-12 col-md-4">
-                    <h3>The culture that shapes us</h3>
+                    <h3 class="slide-in slide-right">The culture that shapes us</h3>
                 </div>
                 <div class="col-12 col-md-5">
-                    <p>It&#8217;s not just words. It&#8217;s our philosophy. And it runs all the way from inside our office walls to the cities of Germany.</p>
+                    <p class="slide-in slide-left">It&#8217;s not just words. It&#8217;s our philosophy. And it runs all the way from inside our office walls to the cities of Germany.</p>
                 </div>
             </div>
-            <div class="row justify-content-between mt-5">
+            <div class="row justify-content-between mt-5 slide-in slide-up">
                 <div class="col-12 col-md-6 col-lg-3 mb-5 mb-md-0">
                     <div class="row align-items-center">
                         <div class="d-flex col-4 col-md-12 justify-content-center">
@@ -176,7 +176,7 @@
     </section>
     <section class="pt-5 pb-5 bkg-blue bkg-md-white">
         <div class="container-xxl mt-5 mb-5 pb-5">
-            <h2 class="mb-2 mb-md-5">Want to work with us ?</h2>
+            <h2 class="mb-2 mb-md-5 slide-in slide-right">Want to work with us ?</h2>
             <div class="w-100">
                 <div class="pt-5 border-bottom-white border-bottom-md-blue">
                     <div class="col-12 col-md-10">
