drawer language option, favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nestar</title>
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
@@ -13,13 +14,13 @@
 <body>
     <div class="col-12 m-auto position-fixed navbar" id="navbar">
         <nav id="drawer" class="drawer position-absolute min-vh-100 min-vw-100 bkg-green top-0 row justify-content-between align-items-center">
-            <a class="position-absolute logo" href="/"><img src="./assets/images/logo-purple.svg" alt="Nestar"></a>
+            <a class="position-absolute logo" href="index.html"><img src="./assets/images/logo-purple.svg" alt="Nestar"></a>
             <div id="closeDrawer" class="close">
                 <div class="bkg-lavender"></div>
                 <div class="bkg-lavender"></div>
             </div>
             <div class="d-flex flex-column justify-content-center vh-100 menu-list col-4">
-                <h2 class="color-lavender"><a href="/" class="link--hover">Home<div class="bkg-lavender"></div></a></h2>
+                <h2 class="color-lavender"><a href="index.html" class="link--hover">Home<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="#" class="link--hover">About<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="career.html" class="link--hover">Careers<div class="bkg-lavender"></div></a></h2>
                 <h2 class="color-lavender"><a href="#" class="link--hover">Contact<div class="bkg-lavender"></div></a></h2>
@@ -27,9 +28,13 @@
             <div class="col-5 d-none d-lg-block">
                 <img class="w-100" src="./assets/images/lighting.jpg" />
             </div>
+            <div class="d-flex flex-column align-items-start position-absolute drawer-language-options color-lavender">
+                <a class="d-inline-block active l300" href="#">English</a>
+                <a class="d-inline-block l300" href="#">Deutsche</a>
+            </div>
         </nav>
         <div class="container-xxl m-auto d-flex justify-content-between">
-                <a href="/"><img src="./assets/images/logo-darkblue.svg" alt="Nestar"></a>
+                <a href="index.html"><img src="./assets/images/logo-darkblue.svg" alt="Nestar"></a>
                 <div class="d-flex justify-content-between">
                     <div class="d-none d-sm-block me-5 language-option">
                         <a class="l300 pb-2 me-2 link--hover active">EN<div class="bkg-darkblue"></div></a>
