--- a/career.html
+++ b/career.html
@@ -192,7 +192,9 @@
                     </div>
                 </div>
                 <div class="mt-3" id="jobs"></div>
-                <div class="mt-3 hidden-list" id="hiddenJobs"></div>
+                <div class="expand" id="expand">
+                    <div class="mt-3 hidden-list" id="hiddenJobs"></div>
+                </div>
                 <p class="large text-center d-md-none button-clickable mt-5" id="showList">See more</p>
             </div>
         </div>
