menu position fix

--- a/career.html
+++ b/career.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="col-12 m-auto position-fixed navbar" id="navbar">
-        <nav id="drawer" class="drawer position-absolute min-vh-100 min-vw-100 bkg-green top-0 row justify-content-between align-items-center">
+        <nav id="drawer" class="drawer position-absolute min-vh-100 min-vw-100 bkg-green top-0 row justify-content-between align-items-center m-0">
             <a class="position-absolute logo" href="index.html"><img src="./assets/images/logo-purple.svg" alt="Nestar"></a>
             <div id="closeDrawer" class="close">
                 <div class="bkg-lavender"></div>
